--- a/notebooks/dl_process.ipynb
+++ b/notebooks/dl_process.ipynb
@@ -114,16 +114,17 @@
       "metadata": {
         "id": "cCOQ3C4dDH9c",
         "colab_type": "code",
-        "outputId": "b163c939-3a84-4d6f-cb75-07a44033983b",
+        "outputId": "e363f5cd-842c-4182-81f6-c96c2bb8d189",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 413
+          "height": 433
         }
       },
       "source": [
         "# @title imports\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -132,32 +133,32 @@
         "!wget https://raw.githubusercontent.com/BitKnitting/transfer_nilm_exploration/master/code/python_lib/plots.py\n",
         "import plots"
       ],
-      "execution_count": 1,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-01-04 14:38:24--  https://raw.githubusercontent.com/BitKnitting/transfer_nilm_exploration/master/code/python_lib/ziptodf.py\n",
+            "--2020-01-05 12:00:19--  https://raw.githubusercontent.com/BitKnitting/transfer_nilm_exploration/master/code/python_lib/ziptodf.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1361 (1.3K) [text/plain]\n",
-            "Saving to: ‘ziptodf.py’\n",
+            "Saving to: ‘ziptodf.py.2’\n",
             "\n",
-            "\rziptodf.py            0%[                    ]       0  --.-KB/s               \rziptodf.py          100%[===================>]   1.33K  --.-KB/s    in 0s      \n",
+            "\rziptodf.py.2          0%[                    ]       0  --.-KB/s               \rziptodf.py.2        100%[===================>]   1.33K  --.-KB/s    in 0s      \n",
             "\n",
-            "2020-01-04 14:38:24 (325 MB/s) - ‘ziptodf.py’ saved [1361/1361]\n",
+            "2020-01-05 12:00:19 (105 MB/s) - ‘ziptodf.py.2’ saved [1361/1361]\n",
             "\n",
-            "--2020-01-04 14:38:27--  https://raw.githubusercontent.com/BitKnitting/transfer_nilm_exploration/master/code/python_lib/plots.py\n",
+            "--2020-01-05 12:00:22--  https://raw.githubusercontent.com/BitKnitting/transfer_nilm_exploration/master/code/python_lib/plots.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2564 (2.5K) [text/plain]\n",
-            "Saving to: ‘plots.py’\n",
+            "Saving to: ‘plots.py.2’\n",
             "\n",
-            "plots.py            100%[===================>]   2.50K  --.-KB/s    in 0s      \n",
+            "plots.py.2          100%[===================>]   2.50K  --.-KB/s    in 0s      \n",
             "\n",
-            "2020-01-04 14:38:27 (47.4 MB/s) - ‘plots.py’ saved [2564/2564]\n",
+            "2020-01-05 12:00:22 (35.7 MB/s) - ‘plots.py.2’ saved [2564/2564]\n",
             "\n"
           ],
           "name": "stdout"
@@ -238,7 +239,7 @@
       "metadata": {
         "id": "g79lLqPmFA_W",
         "colab_type": "code",
-        "outputId": "412d2966-59ff-401a-f8a0-18180fc7b842",
+        "outputId": "f95e2d8a-077c-4730-ca37-d33ac3f145af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 917
@@ -247,7 +248,7 @@
       "source": [
         "ziptodf.print_stats(df_input_data,\"Input Data\")"
       ],
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +367,7 @@
       "metadata": {
         "id": "LLzFE6XAkueN",
         "colab_type": "code",
-        "outputId": "64e456dc-e383-41a4-a926-3a71d3460a3e",
+        "outputId": "07fce310-5b81-4c91-9a23-14398e6188c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -376,7 +377,7 @@
         "df_time_between_samples = get_sample_rates(df_input_data)\n",
         "df_time_between_samples.describe()"
       ],
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +445,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 24
         },
         {
           "output_type": "display_data",
@@ -548,7 +549,7 @@
       "metadata": {
         "id": "cEDHzYE30xm-",
         "colab_type": "code",
-        "outputId": "5f555ecc-04f1-4380-8051-a311bd2ddc1c",
+        "outputId": "49d7500d-739b-4574-ad4e-f195293754e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -557,7 +558,7 @@
       "source": [
         "plot_gaps(df_input_data,df_time_between_samples,50)"
       ],
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,17 +609,17 @@
       "metadata": {
         "id": "R-VWoOguIeXD",
         "colab_type": "code",
-        "outputId": "2a70ac9c-38a2-46ab-8c0f-2629140407bd",
+        "outputId": "ed2f224b-f205-4e42-bb5f-4dbb78e60f15",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 897
+          "height": 917
         }
       },
       "source": [
         "df_input_data.hist(bins=50,figsize=(20,15))\n",
         "plt.show"
       ],
-      "execution_count": 9,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +631,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -661,7 +662,7 @@
       "metadata": {
         "id": "EDOKBZnuKLTi",
         "colab_type": "code",
-        "outputId": "28671986-cdaf-43d2-8cf5-291287540826",
+        "outputId": "63dd808a-a333-4397-faef-d4e7c77fcbdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 904
@@ -670,19 +671,19 @@
       "source": [
         "plots.multi_line(df_input_data['12-25-2019'][['Pa','Pr','P']],figsize=(30,16))"
       ],
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4c2be691d0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa15b8790b8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -714,7 +715,7 @@
       "metadata": {
         "id": "xvYw_N5PI3it",
         "colab_type": "code",
-        "outputId": "6cd35e12-e003-4ac6-f5da-e714fa1c05f3",
+        "outputId": "c47f7d50-7a58-4c9f-9274-2a6888fff61e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -730,7 +731,7 @@
         "df_preprocessed_data.head()\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +821,128 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XWIkzrCMhT7t",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Feature Scaling\n",
+        "We'll be using standardization, i.e.: For each column that will be standardize, subtract the mean of the column (so the standard values always have a zero mean) and then divide by the standard deviation (so the resulting distribution has unit variance).  We chose standardization over min-max scaling because it is less affected by outliers.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cQr-mD57iEKY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "outputId": "4e5260b9-c285-4032-b7e3-2ac133604662"
+      },
+      "source": [
+        "scaler = StandardScaler()\n",
+        "df_preprocessed_data[['Pa','Pr']] = scaler.fit_transform(df_preprocessed_data[['Pa','Pr']])\n",
+        "df_preprocessed_data.head()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Pa</th>\n",
+              "      <th>Pr</th>\n",
+              "      <th>Hours</th>\n",
+              "      <th>microwave</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>timestamp</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2019-12-22 12:56:10.047039032-08:00</th>\n",
+              "      <td>-0.520687</td>\n",
+              "      <td>-0.148538</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-12-22 12:56:12.195168972-08:00</th>\n",
+              "      <td>2.966964</td>\n",
+              "      <td>-0.064993</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-12-22 12:56:14.329384089-08:00</th>\n",
+              "      <td>2.934061</td>\n",
+              "      <td>-0.067858</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-12-22 12:56:16.460676908-08:00</th>\n",
+              "      <td>2.900344</td>\n",
+              "      <td>-0.072872</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-12-22 12:56:18.594168901-08:00</th>\n",
+              "      <td>2.894507</td>\n",
+              "      <td>-0.071217</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                           Pa        Pr  Hours  microwave\n",
+              "timestamp                                                                \n",
+              "2019-12-22 12:56:10.047039032-08:00 -0.520687 -0.148538     12          0\n",
+              "2019-12-22 12:56:12.195168972-08:00  2.966964 -0.064993     12          0\n",
+              "2019-12-22 12:56:14.329384089-08:00  2.934061 -0.067858     12          0\n",
+              "2019-12-22 12:56:16.460676908-08:00  2.900344 -0.072872     12          0\n",
+              "2019-12-22 12:56:18.594168901-08:00  2.894507 -0.071217     12          0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
         }
       ]
     },
@@ -840,7 +962,7 @@
       "metadata": {
         "id": "BEvFZL5pxikM",
         "colab_type": "code",
-        "outputId": "60b57faf-20dd-4ad5-8efc-8a7aec9a5fb7",
+        "outputId": "4903096c-a3c5-4019-d533-a0e001057938",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -851,7 +973,7 @@
         "df_microwave_reading_start = df_diff_microwave_readings[df_diff_microwave_readings > 0]\n",
         "print(f'There are {len(df_microwave_reading_start)} microwave readings')"
       ],
-      "execution_count": 12,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +1004,7 @@
       "metadata": {
         "id": "KkpnbtGgDzoY",
         "colab_type": "code",
-        "outputId": "f1474506-c43f-4456-932b-3dfc6a1f516e",
+        "outputId": "1c35cad4-eea8-459f-c309-5a34b50d1f25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 127
@@ -893,7 +1015,7 @@
         "from google.colab import files\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 13,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
